# mega-cli

./: Cargo.toml  flake.nix  result
src/: main.rs
src/cli/: mod.rs
src/utils/: mod.rs  node.rs
