[package]
name = "mega-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-read-progress = "0.2.0"
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
colog = "1.3.0"
colored = "3.0.0"
console = "0.16.0"
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = "0.18.0"
inquire = "0.7.5"
itertools = "0.14.0"
log = "0.4.27"
mega = "0.8.0"
regex = "1.11.1"
reqwest = "0.12.22"
sluice = "0.6.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
